--- a/css/styles.css
+++ b/css/styles.css
@@ -4,16 +4,28 @@
   --button-color: #2196f3;
   --main-title-color: #ffffff;
   --background-color: #2f303a;
+  --main-background-color: #e5e5e5;
 }
 
 body {
-  font-family: roboto;
+  font-family: 'Open Sans', sans-serif;
+  font-family: 'roboto';
+  background-color: var(--main-background-color);
 }
 .list {
   list-style: none;
 }
 .link {
   text-decoration: none;
+}
+.btn {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  color: var(--main-title-color);
+  background-color: var(--button-color);
+  cursor: pointer;
 }
 
 /* --------------header---------------- */
@@ -23,13 +35,10 @@ body {
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
- 
+  color: var(--first-text-color);
 }
-.logo-color-1 {
+.logo-color-first {
   color: var(--button-color);
-}
-.logo-color-head{
- color: var(--first-text-color);
 }
 
 .header {
@@ -39,20 +48,20 @@ body {
   line-height: 1.1;
   letter-spacing: 0.02em;
 }
-.nav-color {
+.nav {
   color: var(--first-text-color);
 }
-.contacts-color {
+.contacts {
   color: var(--second-text-color);
 }
 
-.nav-color:hover,
-.nav-color:focus {
+.nav:hover,
+.nav:focus {
   color: var(--button-color);
 }
 
-.contacts-color:hover,
-.contacts-color:focus {
+.contacts:hover,
+.contacts:focus {
   color: var(--button-color);
 }
 
@@ -73,37 +82,25 @@ body {
   color: var(--main-title-color);
 }
 
-.btn {
-  font-family: Roboto;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.9;
-  color: var(--main-title-color);
-  background-color: var(--button-color);
-}
-
 /* ------------ about us ------------ */
-'
 
-
-.about-title{
-font-family: Roboto;
-font-size: 14px;
-line-height: 1.1;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--first-text-color);
+.about-title {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--first-text-color);
 }
-.about-text{
-font-family: Roboto;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
-color: var(--second-text-color);
+.about-text {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
 }
 
 /* ------------ what we are doing? ------------ */
-
 
 .title {
   font-family: Roboto;
@@ -112,59 +109,91 @@ color: var(--second-text-color);
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--first-text-color);
-} 
+}
 /* title for : doing and team */
 
 /* ------------ our team ------------ */
 
-
-.team-item-title{
-font-family: Roboto;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.2;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--first-text-color);
+.team-item-title {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--first-text-color);
 }
 
-.team-item-text{
-font-family: Roboto;
-font-size: 16px;
-line-height: 1.2;
-text-align: center;
-letter-spacing: 0.03em;
-color: var(--second-text-color);
+.team-item-text {
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
 }
-
 
 /* -------------- footer ------------ */
 
-.footer-bg{
-    background-color: var(--background-color);
+.footer-bg {
+  background-color: var(--background-color);
 }
 
-.logo-color-foot{
-    color: var(--main-title-color);
+.logo-color-footer {
+  color: var(--main-title-color);
 }
-.footer-link{
-font-family: Roboto;
-font-size: 14px;
-line-height: 1.7;
-letter-spacing: 0.03em;
+.footer-link {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
 }
-.footer-map{
-    color: var(--main-title-color);
+.footer-map {
+  color: var(--main-title-color);
 }
 .footer-contacts {
-color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-map:focus,
-.footer-map:hover{
-    color: var(--button-color);
+.footer-map:hover {
+  color: var(--button-color);
 }
 .footer-contacts:focus,
-.footer-contacts:hover{
-    color: var(--button-color);
+.footer-contacts:hover {
+  color: var(--button-color);
+}
+
+/* ----------- portfolio ----------------- */
+.portfolio-btn {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--first-text-color);
+  background-color: #f5f4fa;
+  cursor: pointer;
+}
+.portfolio-btn:focus,
+.portfolio-btn:hover {
+  color: var(--main-title-color);
+  background-color: var(--button-color);
+}
+
+.portfolio-title {
+  font-family: Roboto;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--first-text-color);
+}
+
+.portfolio-text {
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--second-text-color);
 }
