--- a/css/styles.css
+++ b/css/styles.css
@@ -58,12 +58,17 @@ body {
   padding-right: 15px;
   margin: 0 auto;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 /* --------------header---------------- */
 .header {
   background-color: var(--main-title-color);
   padding-top: 32px;
   padding-bottom: 32px;
+  border: 1px solid #ececec;
 }
 
 .header-nav {
@@ -145,13 +150,14 @@ body {
   text-transform: uppercase;
   color: var(--main-title-color);
   width: 696px;
-  height: 120px;
+
   margin: 0 auto;
 }
 .hero-button {
   width: 216px;
   height: 56px;
   border-radius: 4px;
+  border: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   margin-top: 30px;
 }
@@ -159,8 +165,6 @@ body {
 /* ------------ about us ------------ */
 .about {
   background-color: var(--main-title-color);
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 .about-wrap {
   display: flex;
@@ -190,7 +194,6 @@ body {
 
 /* ------------ what we are doing? ------------ */
 .doing {
-  padding-bottom: 94px;
   background-color: var(--main-title-color);
 }
 .doing-wrap {
@@ -216,11 +219,6 @@ body {
 /* title for : doing and team */
 
 /* ------------ our team ------------ */
-
-.team {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
 
 .team-title {
   margin-bottom: 50px;
@@ -256,6 +254,9 @@ body {
   flex-basis: calc((100% - 4 * 30px) / 4);
   margin-right: 30px;
   margin-bottom: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 /* .team-item:not(:last-child) {
   margin-right: 30px;
@@ -307,6 +308,11 @@ body {
 }
 
 /* ----------- portfolio ----------------- */
+.portfolio {
+  background-color: var(--main-title-color);
+  padding-top: 100px;
+  padding-bottom: 94px;
+}
 .portfolio-btn {
   font-family: Roboto;
   font-weight: 500;
@@ -317,6 +323,12 @@ body {
   color: var(--first-text-color);
   background-color: #f5f4fa;
   cursor: pointer;
+  border-radius: 4px;
+  border: 0;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
 }
 .portfolio-btn:focus,
 .portfolio-btn:hover {
@@ -330,6 +342,7 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--first-text-color);
+  margin-bottom: 4px;
 }
 
 .portfolio-text {
@@ -338,4 +351,37 @@ body {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
+}
+
+.portfolio-btn-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 56px;
+}
+.portfolio-btn-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.portfolio-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: -30px;
+  margin-right: -30px;
+}
+
+.portfolio-item {
+  flex-basis: calc((100% - 3 * 30px) / 3);
+  margin-bottom: 30px;
+  margin-right: 30px;
+}
+.portfolio-item-content {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
 }
