--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,6 @@ body {
 
 /* -------------- hero------------ */
 .hero-container {
-  height: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -142,10 +141,9 @@ body {
     url(../images/hero-bg.png);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
-  /* flex-grow: 1;
-  height: 100%;
-  width: 100%; */
+  background-size: 1600px;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -198,6 +196,17 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--second-text-color);
+}
+
+.about-item-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  width: 270px;
+  height: 120px;
+  border-radius: 4px;
+  background: #f5f4fa;
 }
 
 /* ------------ what we are doing? ------------ */
@@ -276,6 +285,41 @@ body {
   background-color: var(--main-title-color);
   padding-top: 30px;
   padding-bottom: 30px;
+}
+.team-social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 16px;
+}
+.team-social-item {
+  width: 44px;
+  height: 44px;
+}
+.team-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+.team-social-link {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #afb1b8;
+}
+.team-icon {
+  fill: currentColor;
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+  background-color: #2196f3;
+}
+
+.team-social-link:hover .team-icon,
+.team-social-link:focus.team-icon {
+  fill: var(--main-title-color);
 }
 
 /* -------------- footer ------------ */
