--- a/css/styles.css
+++ b/css/styles.css
@@ -359,6 +359,48 @@ body {
 .footer-contacts:hover {
   color: var(--button-color);
 }
+.footer-container {
+  display: flex;
+}
+
+.footer-social {
+  display: flex;
+  flex-direction: column;
+  margin-left: 70px;
+}
+
+.footer-title {
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer-social-list {
+  display: flex;
+  margin-top: 20px;
+}
+.footer-social-item {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+.footer-icon {
+  fill: var(--main-title-color);
+}
+.footer-social-item:hover,
+.footer-social-item:focus {
+  background-color: var(--button-color);
+}
 
 /* ----------- portfolio ----------------- */
 .portfolio {
