--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --main-title-color: #ffffff;
   --background-color: #2f303a;
   --main-background-color: #e5e5e5;
+  --border-color: #afb1b8;
 }
 
 p,
@@ -34,8 +35,6 @@ img {
 body {
   font-family: 'Open Sans', sans-serif;
   font-family: 'roboto';
-  background-color: var(--main-background-color);
-  /* width: 1600px; */
 }
 .list {
   list-style: none;
@@ -138,9 +137,6 @@ body {
   fill: var(--second-text-color);
   margin-right: 10px;
 }
-/* .header-icon:hover {
-  fill: var(--button-color);
-} */
 
 /* -------------- hero------------ */
 .hero-container {
@@ -252,7 +248,9 @@ body {
 /* title for : doing and team */
 
 /* ------------ our team ------------ */
-
+.team {
+  background-color: #f5f4fa;
+}
 .team-title {
   margin-bottom: 50px;
 }
@@ -321,7 +319,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #afb1b8;
+  color: var(--border-color);
 }
 .team-icon {
   fill: currentColor;
@@ -337,6 +335,58 @@ body {
   fill: var(--main-title-color);
 }
 
+/* ----------------- clients ------------ */
+
+.clients-title {
+  font-family: Roboto;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--first-text-color);
+}
+.clients-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+.clients-item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid;
+  border-radius: 4px;
+  border-color: var(--border-color);
+  /* padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 32px;
+  padding-right: 32px; */
+}
+.clients-link {
+  width: 100%;
+  height: 100%;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+.clients-item:not(:last-child) {
+  margin-right: 30px;
+}
+.clients-icon {
+  fill: var(--border-color);
+}
+.clients-item:hover .clients-icon,
+.clients-item:focus .clients-icon {
+  fill: var(--button-color);
+}
+.clients-item:hover,
+.clients-item:focus {
+  border-color: var(--button-color);
+}
 /* -------------- footer ------------ */
 
 .footer {
