--- a/css/styles.css
+++ b/css/styles.css
@@ -494,6 +494,8 @@ body {
 .portfolio-btn:hover {
   color: var(--main-title-color);
   background-color: var(--button-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-title {
@@ -544,4 +546,11 @@ body {
   padding-left: 24px;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
+}
+
+.portfolio-item:hover,
+.portfolio-item:focus {
+  border: 1px solid #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
