--- a/css/styles.css
+++ b/css/styles.css
@@ -65,9 +65,9 @@ body {
 /* --------------header---------------- */
 .header {
   background-color: var(--main-title-color);
-  padding-top: 32px;
-  padding-bottom: 32px;
-  border: 1px solid #ececec;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #ececec;
 }
 
 .header-nav {
@@ -331,7 +331,7 @@ body {
 }
 
 .team-social-link:hover .team-icon,
-.team-social-link:focus.team-icon {
+.team-social-link:focus .team-icon {
   fill: var(--main-title-color);
 }
 
@@ -360,18 +360,15 @@ body {
   border: 1px solid;
   border-radius: 4px;
   border-color: var(--border-color);
-  /* padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 32px;
-  padding-right: 32px; */
 }
 .clients-link {
   width: 100%;
   height: 100%;
   padding-top: 16px;
   padding-bottom: 16px;
-  padding-left: 32px;
-  padding-right: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .clients-item:not(:last-child) {
   margin-right: 30px;
@@ -379,8 +376,8 @@ body {
 .clients-icon {
   fill: var(--border-color);
 }
-.clients-item:hover .clients-icon,
-.clients-item:focus .clients-icon {
+.clients-link:hover .clients-icon,
+.clients-link:focus .clients-icon {
   fill: var(--button-color);
 }
 .clients-item:hover,
@@ -447,7 +444,7 @@ body {
   display: flex;
   margin-top: 20px;
 }
-.footer-social-item {
+.footer-social-link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -462,8 +459,8 @@ body {
 .footer-icon {
   fill: var(--main-title-color);
 }
-.footer-social-item:hover,
-.footer-social-item:focus {
+.footer-social-link:hover,
+.footer-social-link:focus {
   background-color: var(--button-color);
 }
 
