--- a/css/styles.css
+++ b/css/styles.css
@@ -657,3 +657,25 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-wrap {
+  position: relative;
+  overflow: hidden;
+}
+.portfolio-wrap-text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  padding: 63px 24px;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  color: var(--main-title-color);
+  transform: translateY(100%);
+  transition: transform 300ms linear;
+}
+.portfolio-item:hover .portfolio-wrap-text {
+  transform: translateY(0%);
+}
