--- a/css/styles.css
+++ b/css/styles.css
@@ -676,7 +676,7 @@ body {
   transform: translateY(100%);
   transition: transform 300ms;
 }
-.portfolio-item:hover .portfolio-wrap-text {
+.portfolio-item:hover .portfolio-wrap-text .portfolio-item:focus .portfolio-wrap-text {
   transform: translateY(0%);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
