--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Roboto;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -427,15 +428,15 @@ body {
 }
 .clients-link:hover .clients-icon,
 .clients-link:focus .clients-icon {
-  fill: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--button-color);
 }
 .clients-item:hover,
 .clients-item:focus {
-  border-color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border-color: var(--button-color);
 }
 /* -------------- footer ------------ */
 
@@ -666,6 +667,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  font-family: Roboto;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
