--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-/* .as {
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
 :root {
   --first-text-color: #212121;
   --second-text-color: #757575;
@@ -273,6 +268,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Roboto;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -427,15 +423,15 @@ body {
 }
 .clients-link:hover .clients-icon,
 .clients-link:focus .clients-icon {
-  fill: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: var(--button-color);
 }
 .clients-item:hover,
 .clients-item:focus {
-  border-color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  border-color: var(--button-color);
 }
 /* -------------- footer ------------ */
 
@@ -495,11 +491,11 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
+  margin-bottom: 20px;
 }
 
 .footer-social-list {
   display: flex;
-  margin-top: 20px;
 }
 .footer-social-link {
   width: 44px;
@@ -521,6 +517,49 @@ body {
   background-color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscribe {
+  margin-left: 93px;
+}
+.footer-input-wrap {
+  display: flex;
+}
+.footer__subscribe-btn {
+  width: 200px;
+  height: 50px;
+  color: var(--main-title-color);
+  background-color: var(--button-color);
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.06em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-left: 12px;
+}
+.footer-btn-icon {
+  margin-left: 10px;
+}
+.footer-input {
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 1.25px;
+  letter-spacing: 0.03em;
+  padding-left: 16px;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 /* -------------- modal ------------------ */
@@ -666,6 +705,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  font-family: Roboto;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
