--- a/css/styles.css
+++ b/css/styles.css
@@ -632,11 +632,11 @@ body {
   font-size: 20px;
   line-height: 1.15;
   letter-spacing: 0.03em;
-  margin-bottom: 12px;
+  margin-bottom: 10px;
   color: var(--first-text-color);
 }
 .modal-form-field {
-  margin-bottom: 10px;
+  margin-bottom: 6px;
 }
 .modal-input {
   margin-top: 4px;
@@ -654,8 +654,8 @@ body {
 }
 .modal-icon {
   position: absolute;
-  top: 56%;
-  transform: translateY(-56%);
+  top: 50%;
+  transform: translateY(-50%);
   left: 15px;
   transition: fill 300ms linear;
 }
@@ -670,10 +670,7 @@ body {
   border-radius: 4px;
   padding: 12px 16px;
 }
-.modal-check {
-  margin-top: 20px;
-  margin-bottom: 30px;
-}
+
 .modal-check-text {
   font-family: Roboto;
   font-size: 14px;
@@ -684,8 +681,51 @@ body {
   position: relative;
   align-items: center;
   justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.modal-policy-text {
+  margin-left: 3px;
+  color: var(--button-color);
+  /* text-decoration: underline;
+  text-decoration-style: solid; */
+}
+.modal-check-text::before {
+  content: '';
+  display: block;
+  width: 16px;
+  height: 15px;
+  background-image: url(../images/check.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-right: 7px;
 }
 
+.modal-check:checked + .modal-check-text::before {
+  background-image: url(../images/checked.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.modal-submit-btn {
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--main-title-color);
+
+  width: 200px;
+  height: 50px;
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.modal-btn {
+  display: flex;
+  justify-content: center;
+}
 /* ----------- portfolio ----------------- */
 .portfolio {
   background-color: var(--main-title-color);
