--- a/css/styles.css
+++ b/css/styles.css
@@ -639,12 +639,12 @@ body {
   margin-bottom: 6px;
 }
 .modal-input {
+  display: block;
   margin-top: 4px;
-
   width: 448px;
   height: 40px;
+  outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
   border-radius: 4px;
   padding-left: 40px;
   padding-right: 25px;
@@ -666,7 +666,6 @@ body {
   outline: none;
   resize: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
-  box-sizing: border-box;
   border-radius: 4px;
   padding: 12px 16px;
 }
@@ -725,6 +724,17 @@ body {
 .modal-btn {
   display: flex;
   justify-content: center;
+}
+.modal-input:focus,
+.modal-text:focus {
+  border-color: var(--button-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus + .modal-icon {
+  fill: var(--button-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ----------- portfolio ----------------- */
 .portfolio {
