--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ body {
   color: var(--first-text-color);
   margin-right: 93px;
 }
-.logo__first-color {
+.logo--first-color {
   color: var(--button-color);
 }
 .header__link {
@@ -143,7 +143,7 @@ body {
   color: var(--second-text-color);
 }
 
-.header__contacts:not(:last-child) {
+.header__item--contacts:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -153,8 +153,8 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header__link--contacts:hover .header__icon,
-.header__link--contacts:focus .header__icon {
+.header__link--contacts:hover .header--icon,
+.header__link--contacts:focus .header--icon {
   fill: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -163,7 +163,7 @@ body {
   display: flex;
 }
 
-.header__icon {
+.header--icon {
   fill: var(--second-text-color);
   margin-right: 10px;
 }
@@ -213,16 +213,16 @@ body {
 .about {
   background-color: var(--main-title-color);
 }
-.about-wrap {
+.about__list {
   display: flex;
 }
-.about-item {
+.about__item {
   width: 270px;
 }
-.about-item:not(:last-child) {
+.about__item:not(:last-child) {
   margin-right: 30px;
 }
-.about-title {
+.about__item--title {
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.1;
@@ -231,7 +231,7 @@ body {
   color: var(--first-text-color);
   margin-bottom: 10px;
 }
-.about-text {
+.about__item--text {
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.71;
@@ -239,7 +239,7 @@ body {
   color: var(--second-text-color);
 }
 
-.about-item-icon {
+.about__item--icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -255,20 +255,20 @@ body {
   background-color: var(--main-title-color);
   padding-bottom: 94px;
 }
-.doing-list {
+.doing__list {
   display: flex;
   align-items: center;
   margin-top: 50px;
   margin-bottom: 0;
 }
 
-.doing-item:not(:last-child) {
+.doing__item:not(:last-child) {
   margin-right: 30px;
 }
-.doing-item {
+.doing__item {
   position: relative;
 }
-.doing-text {
+.doing--text {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -303,11 +303,11 @@ body {
 .team {
   background-color: #f5f4fa;
 }
-.team-title {
+.team__title {
   margin-bottom: 50px;
 }
 
-.team-item-title {
+.team__item--title {
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
@@ -318,7 +318,7 @@ body {
   margin-bottom: 10px;
 }
 
-.team-item-text {
+.team__item--text {
   font-family: Roboto;
   font-size: 16px;
   line-height: 1.2;
@@ -326,14 +326,14 @@ body {
   letter-spacing: 0.03em;
   color: var(--second-text-color);
 }
-.team-list {
+.team__list {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   margin-right: -30px;
   margin-bottom: -30px;
 }
-.team-item {
+.team__item {
   flex-basis: calc((100% - 4 * 30px) / 4);
   margin-right: 30px;
   margin-bottom: 30px;
@@ -341,30 +341,30 @@ body {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-/* .team-item:not(:last-child) {
+/* .team__item:not(:last-child) {
   margin-right: 30px;
 } */
-.team-item-content {
+.team__item--content {
   display: flex;
   flex-direction: column;
   background-color: var(--main-title-color);
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.team-social-list {
+.team__list--social {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 16px;
 }
-.team-social-item {
+.team__item--social {
   width: 44px;
   height: 44px;
 }
-.team-social-item:not(:last-child) {
+.team__item--social:not(:last-child) {
   margin-right: 10px;
 }
-.team-social-link {
+.team__link--social {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -373,19 +373,19 @@ body {
   align-items: center;
   color: var(--border-color);
 }
-.team-icon {
+.team--icon {
   fill: currentColor;
 }
 
-.team-social-link:hover,
-.team-social-link:focus {
+.team__link--social:hover,
+.team__link--social:focus {
   background-color: #2196f3;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.team-social-link:hover .team-icon,
-.team-social-link:focus .team-icon {
+.team__link--social:hover .team--icon,
+.team__link--social:focus .team--icon {
   fill: var(--main-title-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -393,7 +393,7 @@ body {
 
 /* ----------------- clients ------------ */
 
-.clients-title {
+.clients__title {
   font-family: Roboto;
   font-size: 36px;
   line-height: 1.16;
@@ -402,12 +402,12 @@ body {
 
   color: var(--first-text-color);
 }
-.clients-list {
+.clients__list {
   display: flex;
   justify-content: center;
   margin-top: 50px;
 }
-.clients-item {
+.clients__item {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -417,7 +417,7 @@ body {
   border-radius: 4px;
   border-color: var(--border-color);
 }
-.clients-link {
+.clients__link {
   width: 100%;
   height: 100%;
   padding-top: 16px;
@@ -426,20 +426,20 @@ body {
   justify-content: center;
   align-items: center;
 }
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
   margin-right: 30px;
 }
-.clients-icon {
+.clients--icon {
   fill: var(--border-color);
 }
-.clients-link:hover .clients-icon,
-.clients-link:focus .clients-icon {
+.clients__link:hover .clients--icon,
+.clients__link:focus .clients--icon {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   fill: var(--button-color);
 }
-.clients-item:hover,
-.clients-item:focus {
+.clients__item:hover,
+.clients__item:focus {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border-color: var(--button-color);
@@ -452,40 +452,40 @@ body {
   background-color: var(--background-color);
 }
 
-.logo-footer {
+.footer__logo {
   display: block;
   margin-bottom: 20px;
   color: var(--main-title-color);
 }
-.footer-list {
+.footer__list {
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
 }
-.footer-item:not(:last-child) {
+.footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
-.footer-map {
+.footer__item--map {
   color: var(--main-title-color);
 }
-.footer-contacts {
+.footer__item--contacts {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-map:focus,
-.footer-map:hover {
+.footer__item--map:focus,
+.footer__item--map:hover {
   color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-contacts:focus,
-.footer-contacts:hover {
+.footer__item--contacts:focus,
+.footer__item--contacts:hover {
   color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-container {
+.footer__container {
   display: flex;
 }
 
@@ -495,7 +495,7 @@ body {
   margin-left: 70px;
 }
 
-.footer-title {
+.footer--title {
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.14;
@@ -505,10 +505,10 @@ body {
   margin-bottom: 20px;
 }
 
-.footer-social-list {
+.footer-social__list {
   display: flex;
 }
-.footer-social-link {
+.footer-social__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -517,14 +517,14 @@ body {
   justify-content: center;
   align-items: center;
 }
-.footer-social-item:not(:last-child) {
+.footer-social__item:not(:last-child) {
   margin-right: 10px;
 }
-.footer-icon {
+.footer--icon {
   fill: var(--main-title-color);
 }
-.footer-social-link:hover,
-.footer-social-link:focus {
+.footer-social__link:hover,
+.footer-social__link:focus {
   background-color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -533,10 +533,10 @@ body {
 .footer-subscribe {
   margin-left: 93px;
 }
-.footer-input-wrap {
+.footer__input--wrap {
   display: flex;
 }
-.footer__subscribe-btn {
+.footer-subscribe__btn {
   width: 200px;
   height: 50px;
   color: var(--main-title-color);
@@ -553,10 +553,10 @@ body {
   border-radius: 4px;
   margin-left: 12px;
 }
-.footer-btn-icon {
+.footer__btn--icon {
   margin-left: 10px;
 }
-.footer-input {
+.footer__input {
   width: 358px;
   height: 50px;
   background-color: transparent;
@@ -608,6 +608,9 @@ body {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
+.modal-close:hover .icon-close {
+  fill: var(--button-color);
+}
 .backdrop.is-hidden .modal {
   transform: scale(0.5) skew(20deg, 70deg) translate(100px, 100px);
 }
@@ -616,7 +619,7 @@ body {
   opacity: 0;
   pointer-events: none;
 }
-.modal-label {
+.modal__label {
   font-family: Roboto;
   font-style: normal;
   font-weight: normal;
@@ -625,7 +628,7 @@ body {
   letter-spacing: 0.01em;
   color: var(--second-text-color);
 }
-.modal-title {
+.modal__title {
   width: 448px;
   height: 23px;
   font-family: Roboto;
@@ -638,7 +641,7 @@ body {
 .modal-form-field {
   margin-bottom: 6px;
 }
-.modal-input {
+.modal__input {
   display: block;
   margin-top: 4px;
   width: 448px;
@@ -649,17 +652,17 @@ body {
   padding-left: 40px;
   padding-right: 25px;
 }
-.modal-input-wrap {
+.modal__input--wrap {
   position: relative;
 }
-.modal-icon {
+.modal--icon {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   left: 15px;
   transition: fill 300ms linear;
 }
-.modal-text {
+.modal__text {
   margin-top: 4px;
   width: 448px;
   height: 120px;
@@ -670,7 +673,7 @@ body {
   padding: 12px 16px;
 }
 
-.modal-check-text {
+.modal__check--text {
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.71;
@@ -683,13 +686,13 @@ body {
   margin-top: 20px;
   margin-bottom: 20px;
 }
-.modal-policy-text {
+.modal__link--text {
   margin-left: 3px;
   color: var(--button-color);
   /* text-decoration: underline;
   text-decoration-style: solid; */
 }
-.modal-check-text::before {
+.modal__check--text::before {
   content: '';
   display: block;
   width: 16px;
@@ -701,13 +704,13 @@ body {
   margin-right: 7px;
 }
 
-.modal-check:checked + .modal-check-text::before {
+.modal__check:checked + .modal__check--text::before {
   background-image: url(../images/checked.svg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
-.modal-submit-btn {
+.modal-submit__btn {
   font-family: Roboto;
   font-weight: 700;
   font-size: 16px;
@@ -721,17 +724,17 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
-.modal-btn {
+.modal-submit {
   display: flex;
   justify-content: center;
 }
-.modal-input:focus,
-.modal-text:focus {
+.modal__input:focus,
+.modal__text:focus {
   border-color: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus + .modal-icon {
+.modal__input:focus + .modal--icon {
   fill: var(--button-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
