--- a/css/styles.css
+++ b/css/styles.css
@@ -748,7 +748,7 @@ body {
   padding-top: 100px;
   padding-bottom: 94px;
 }
-.portfolio-btn {
+.portfolio--btn {
   font-family: Roboto;
   font-weight: 500;
   font-size: 16px;
@@ -765,8 +765,8 @@ body {
   padding-left: 22px;
   padding-right: 22px;
 }
-.portfolio-btn:focus,
-.portfolio-btn:hover {
+.portfolio--btn:focus,
+.portfolio--btn:hover {
   color: var(--main-title-color);
   background-color: var(--button-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -775,7 +775,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-title {
+.portfolio__item--title {
   font-family: Roboto;
   font-size: 18px;
   line-height: 2;
@@ -784,7 +784,7 @@ body {
   margin-bottom: 4px;
 }
 
-.portfolio-text {
+.portfolio__item--text {
   font-family: Roboto;
   font-size: 16px;
   line-height: 1.87;
@@ -792,16 +792,16 @@ body {
   color: var(--second-text-color);
 }
 
-.portfolio-btn-list {
+.portfolio__list--btn {
   display: flex;
   justify-content: center;
   margin-bottom: 56px;
 }
-.portfolio-btn-item:not(:last-child) {
+.portfolio__item--btn:not(:last-child) {
   margin-right: 8px;
 }
 
-.portfolio-list {
+.portfolio__list {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -809,12 +809,12 @@ body {
   margin-right: -30px;
 }
 
-.portfolio-item {
+.portfolio__item {
   flex-basis: calc((100% - 3 * 30px) / 3);
   margin-bottom: 30px;
   margin-right: 30px;
 }
-.portfolio-item-content {
+.portfolio__item--content {
   display: flex;
   flex-direction: column;
   padding-top: 20px;
@@ -825,8 +825,8 @@ body {
   box-sizing: border-box;
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus {
+.portfolio__item:hover,
+.portfolio__item:focus {
   border: 1px solid #eeeeee;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -834,11 +834,11 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-wrap {
+.portfolio__item--wrap {
   position: relative;
   overflow: hidden;
 }
-.portfolio-wrap-text {
+.portfolio__img--text {
   position: absolute;
   top: 0;
   left: 0;
@@ -853,7 +853,7 @@ body {
   transform: translateY(100%);
   transition: transform 300ms;
 }
-.portfolio-item:hover .portfolio-wrap-text {
+.portfolio__item:hover .portfolio__img--text {
   transform: translateY(0%);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
