--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -6,10 +6,12 @@
 }
 .about__item {
   width: 270px;
+
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
-.about__item:not(:last-child) {
-  margin-right: 30px;
-}
+
 .about__item--title {
   font-family: Roboto;
   font-size: 14px;
