--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,12 +1,3 @@
-.clients__title {
-  font-family: Roboto;
-  font-size: 36px;
-  line-height: 1.16;
-  text-align: center;
-  letter-spacing: 0.03em;
-
-  color: var(--first-text-color);
-}
 .clients__list {
   display: flex;
   justify-content: center;
@@ -21,6 +12,17 @@
   border: 1px solid;
   border-radius: 4px;
   border-color: var(--border-color);
+
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
+
+  &:hover,
+  &:focus {
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    border-color: var(--button-color);
+  }
 }
 .clients__link {
   width: 100%;
@@ -31,21 +33,14 @@
   justify-content: center;
   align-items: center;
 }
-.clients__item:not(:last-child) {
-  margin-right: 30px;
-}
+
 .clients--icon {
   fill: var(--border-color);
-}
-.clients__link:hover .clients--icon,
-.clients__link:focus .clients--icon {
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  fill: var(--button-color);
-}
-.clients__item:hover,
-.clients__item:focus {
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  border-color: var(--button-color);
+
+  .clients__link:hover &,
+  .clients__link:focus & {
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    fill: var(--button-color);
+  }
 }
