--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -58,10 +58,11 @@
 .team__item--social {
   width: 44px;
   height: 44px;
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
-.team__item--social:not(:last-child) {
-  margin-right: 10px;
-}
+
 .team__link--social {
   width: 100%;
   height: 100%;
@@ -70,21 +71,20 @@
   justify-content: center;
   align-items: center;
   color: var(--border-color);
+
+  &:hover,
+  &:focus {
+    background-color: #2196f3;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .team--icon {
   fill: currentColor;
-}
-
-.team__link--social:hover,
-.team__link--social:focus {
-  background-color: #2196f3;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.team__link--social:hover .team--icon,
-.team__link--social:focus .team--icon {
-  fill: var(--main-title-color);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  .team__link--social:hover &,
+  .team__link--social:focus & {
+    fill: var(--main-title-color);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
