--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,13 @@
+@import './base/reset';
+@import './base/common';
+@import './utils/variables';
+@import './utils/hidden';
+
+@import './components/container';
+@import './components/button';
+@import './components/title';
+@import './components/modal';
+
 @import './layout/header';
 @import './layout/hero';
 @import './layout/about';
