--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,7 +5,7 @@
   justify-content: center;
 }
 
-.hero__title--bg {
+.hero__title-bg {
   background-color: var(--background-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero-bg.png);
